# kv-quant

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
docs/: ROADMAP.md  scope.md
docs/experiments/: 2026-05-25-kv-dump-compress.md  2026-05-25-kv-mlx-baseline.md  2026-05-25-kv-mlx-harness-bootstrap.md  README.md
docs/experiments/data/: kv_dump_compress_qwen3_5_9b_3x64.json  kv_mlx_baseline.json  kv_mlx_baseline_qwen2_5_0_5b_instruct_bf16.json
docs/lessons/: 2026-05-25-mlx-kv-int8-not-lossless.md
docs/plans/: 2026-05-25-codex-execution-plan.md
experiments/: kv_dump_compress.py  kv_mlx_baseline.py
kv_quant/storage/: __init__.py  codecs.py  dump.py
tests/: test_dump_roundtrip.py  test_smoke.py
